// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";



package file.protobuf;

message CollectionDocument {
extensions 5 to 105;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional ccsds_mal.protobuf.STRING version = 2;
  optional ccsds_mal.protobuf.URI uri = 3;
  optional ccsds_mal.protobuf.BOOLEAN brokenLink = 4;
}
